fixing bug with text color and changing the logic behind changing colors

--- a/client/styles/styl-style.styl
+++ b/client/styles/styl-style.styl
@@ -6,8 +6,11 @@
 .pcb-side
   color clr-pcb-side
 
-.sque-side
+.squeegee-side
   color clr-sque-side
+
+.drilled
+  color clr-drill
 
 .stencil-text
   absolute
@@ -15,7 +18,7 @@
 
 .stencil-view
   background-color clr-stencil
-  border solid 1px black
+  border solid 1px clr-drill
   relative
   transform rotate(-30deg) skewX(20deg)
   width 160px
